k8s/base/ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vs-book-app-strip-books
  namespace: vs-book-app
spec:
  stripPrefix:
    prefixes:
      - /books
