k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vs-book-app
  namespace: vs-book-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vs-book-app
  template:
    metadata:
      labels:
        app: vs-book-app
    spec:
      containers:
        - name: app
          image: ghcr.io/mzakhar/vs-book-app@sha256:96a504b83cd43d9ea7f5938577b477b414c16ab016a7539a5f849431920e5f1f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: data
              mountPath: /data
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-creds
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vs-book-app-data
