k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vs-book-app
  namespace: vs-book-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: vs-book-app-vs-book-app-strip-books@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: vs-book-app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vs-book-app-external
  namespace: vs-book-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: vs-book-app-vs-book-app-strip-books@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: books.zakharhome.org
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: vs-book-app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vs-book-app-external-root
  namespace: vs-book-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: vs-book-app-redirect-root-to-books@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: books.zakharhome.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vs-book-app
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-books
  namespace: vs-book-app
spec:
  redirectRegex:
    regex: ^https?://books\.zakharhome\.org/?$
    replacement: https://books.zakharhome.org/books/
